--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -45,8 +45,8 @@ format = '[$path]($style)[$read_only]($read_only_style)'
 
 [git_branch]
 symbol = '   ' # nf-fa-github_alt, nf-fa-code_fork
-truncation_length = 20
-truncation_symbol = '...'
+truncation_length = 30
+truncation_symbol = '…'
 style = 'fg:#7aa2f7 bg:#2f3039'
 format = '[  $symbol$branch(:$remote_branch) ]($style)' # nf-pl-left_soft_divider
 
